--- a/src/app.html
+++ b/src/app.html
@@ -7,19 +7,19 @@
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href="%sveltekit.assets%/favicons/apple-touch-icon.png"
+			href="%sveltekit.assets%/hoasen.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="%sveltekit.assets%/favicons/favicon-32x32.png"
+			href="%sveltekit.assets%/hoasen.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href="%sveltekit.assets%/favicons/favicon-16x16.png"
+			href="%sveltekit.assets%/hoasen.png"
 		/>
 		<link rel="manifest" href="%sveltekit.assets%/favicons/site.webmanifest" />
 		<link
@@ -28,7 +28,7 @@
 			color="#0ca4a5"
 		/>
 		<link rel="shortcut icon" href="%sveltekit.assets%/favicons/favicon.ico" />
-		<link rel="icon" href="%sveltekit.assets%/favicons/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/hoasen.png" />
 
 		<!-- Tell browser this site is responsive -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -53,3 +53,4 @@
 		<div id="svelte-root">%sveltekit.body%</div>
 	</body>
 </html>
+
